--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "codex-notify-chime"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
 
 [dependencies]
 rodio = "0.21.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+toml = "0.9"
